# zx0-bootloader

./: .drone.yml  .gitignore  CMakeLists.txt  README.md  prj.conf  requirements.txt  setup.py
boards/arm/zx0/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  pinmux.c  zx0.dts  zx0.yaml  zx0_defconfig
boards/arm/zx0/support/: openocd.cfg
bootloader/: CMakeLists.txt  prj.conf
bootloader/boards/arm/zx0/: Kconfig.board  zx0.dts
bootloader/src/: hal.cpp  hal.h  hf2.cpp  hf2.h  i2c.cpp  i2c.h  i2c_sam0.cpp  main.cpp
hf2i2c/: app.py
src/: hal.cpp  hal.h  hf2.cpp  hf2.h  i2c_sam0.cpp  i2c_sam0.h  main.cpp
